--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(255, 229, 206);
-    color: #FFE5CE;
+    color: #E5CEB9;
     font-size: 150%;
     line-height: 1.4;
 }
