--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(220, 206, 185);
+    background-color: rgb(0,0,0);
     color: #E5CEB9;
     font-size: 150%;
     line-height: 1.4;
