--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: rgb(0,0,0);
-    color: #E5CEB9;
+    background-color: rgb(229,206,185);
+    color: #000000;
     font-size: 150%;
     line-height: 1.4;
 }
